# appcenter-fedora

./: AUTHORS  CMakeLists.txt  README  README.md  org.pantheon.appcenter.gschema.xml
data/: CMakeLists.txt  appcenter.desktop
plugins/: CMakeLists.txt  README
plugins/elementary-home/: CMakeLists.txt  elementary-home.plugin  elementary-home.vala
plugins/elementary-home/desktop/: bleachbit.desktop  flash10.desktop  menulibre.desktop  skype.desktop  vlc.desktop
plugins/info-expander/: CMakeLists.txt  info-expander.plugin  info-expander.vala
plugins/info-expander/desktop/: appcenter.desktop  clementine.desktop  gimp.desktop  postinstallerf.desktop  shotwell.desktop
plugins/ratings-reviews/: CMakeLists.txt  ratings-reviews.plugin  ratings-reviews.vala
po/: CMakeLists.txt  am.po  appcenter.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hu.po  id.po  it.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rue.po  sk.po  sl.po  sr.po  tr.po  uk.po  (+3 more)
src/: AppCenter.vala  CMakeLists.txt  MainWindow.vala  Utils.vala  appcentercore.pc.cmake  config.vala.cmake
src/Services/: PluginsManager.vala  Screenshots.vala  Settings.vala  Unity.vala
src/Widgets/: Boxes.vala  Buttons.vala  GridView.vala  InfoMessage.vala  PagesView.vala  ProgressInfo.vala  Toolbar.vala
src/Widgets/Pages/: AppsInfo.vala  AppsView.vala  CategoriesView.vala  ErrorPage.vala  HomePage.vala  UpdatesView.vala
vapi/: packagekit-glib2.vapi  sqlheavy-0.1.vapi
